# clean-clean-rust

./: README.md  index.html  package.json
src/: App.css  App.tsx  index.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/list/: list-container.tsx  list-item.tsx
src/loading/: loading.css  loading.tsx
src/mobx/: list-data.ts  loading.ts
src/path-input/: path-input.tsx
